# moot

./: .gitignore  CMakeLists.txt  Makefile  README.md  Readme.md  world.lua
example/: game.lua
examples/: world.lua
include/: Archetype.hh  Entity.hh  Factory.hh  Game.hh  Template.hh  Window.hh  World.hh
include/Component/: CCollisionBox.hh  CHudRender.hh  CInput.hh  CMove.hh  CName.hh  CPlayer.hh  CPosition.hh  CRender.hh  CRigidbody.hh  CTransform.hh  CUiRender.hh  CView.hh  Component.hh  Composable.hh  Composition.hh  Group.hh  Parser.hh  Types.hh  Variant.hh
include/Entity/: Archetype.hh  Context.hh  Entity.hh  Factory.hh  Handle.hh  Id.hh  Manipulator.hh  Template.hh  TemplateStore.hh  hash.hh
include/Entity/Archetype/: iteration.hh
include/Event/: Event.hh  Listener.hh  Manager.hh  User.hh
include/Property/: Manager.hh  User.hh
include/System/: SInput.hh  SPhysics.hh  SRender.hh  System.hh  Types.hh
include/Utility/: TupleIndex.hh
include/moot/: Game.hh  TrackedValue.hh  Window.hh  World.hh
include/moot/Component/: CCallback.hh  CChildren.hh  CCollisionBox.hh  CConvexPolygon.hh  CEntity.hh  CHudRender.hh  CInput.hh  CParent.hh  CPointable.hh  CPosition.hh  CRender.hh  CRigidbody.hh  CView.hh  Collection.hh  Composable.hh  Composition.hh  Group.hh  Id.hh  Types.hh  Variant.hh
include/moot/Entity/: Archetype.hh  Context.hh  Entity.hh  Factory.hh  Handle.hh  Id.hh  Manager.hh  Pointer.hh  Prototype.hh  PrototypeStore.hh  Querier.hh  Query.hh  Template.hh  TemplateStore.hh  hash.hh  util.hh  utility.hh
include/moot/Event/: Engine.hh  Event.hh  IdRange.hh  Manager.hh  User.hh
include/moot/Global/: Clock.hh
include/moot/Property/: Manager.hh  Properties.hh  Property.hh  User.hh
include/moot/System/: Manager.hh  SCallback.hh  SInput.hh  SPhysics.hh  SRender.hh  Schedule.hh  System.hh  Types.hh
include/moot/parsing/: ComponentAttributes.hh  ComponentNames.hh  Context.hh  EntityFunctions.hh  GlobalFunctions.hh  PrototypeAttributes.hh  TemplateAttributes.hh  types.hh
include/moot/struct/: BoundCoords.hh  Color.hh  Rect.hh  Vector2.hh
include/moot/util/: InstanceCounter.hh  array.hh  iota_view.hh  static_warn.hh
include/moot/utility/: BoundCoords.hh  Color.hh  InstanceCounter.hh  Rect.hh  Vector2.hh  array.hh  static_warn.hh
include/parsing/: CallbackParameters.hh  ComponentAttributes.hh  ComponentNames.hh  ComponentParser.hh  Context.hh  EntityFunctions.hh  TemplateAttributes.hh  types.hh
include/utility/: InstanceCounter.hh  Rect.hh  Vector2.hh  Window.hh  array.hh  bit.hh  math.hh  value.hh
include/utility/tuple/: index.hh  toVectorVariant.hh
include/utility/variant/: indexToCompileTime.hh
lib/sol/: config.hpp  sol.hpp
notes/: IDEAS  IDEAS.md  LINKS  STYLE  TODO  backlog.md  ideas.md  notes.md  todo.md
src/: Archetype.cc  Entity.cc  Factory.cc  Game.cc  Template.cc  Window.cc  World.cc  main.cc
src/Component/: CCallback.cc  CCollisionBox.cc  CConvexPolygon.cc  CEntity.cc  CHudRender.cc  CInput.cc  CMove.cc  CPointable.cc  CRender.cc  CRigidbody.cc  CView.cc  Collection.cc  Component.cc  Composition.cc  Group.cc  Parser.cc
src/Entity/: Archetype.cc  Entity.cc  Factory.cc  Handle.cc  Id.cc  Manager.cc  Manipulator.cc  Prototype.cc  PrototypeStore.cc  Querier.cc  Query.cc  Template.cc  TemplateStore.cc  hash.cc  util.cc  utility.cc
src/Event/: Manager.cc  User.cc
src/Global/: Clock.cc
src/Property/: Manager.cc  Properties.cc  Property.cc  User.cc
src/System/: Manager.cc  SCallback.cc  SInput.cc  SPhysics.cc  SRender.cc  System.cc
src/parsing/: CallbackParameters.cc  ComponentAttributes.cc  ComponentNames.cc  ComponentParser.cc  Context.cc  EntityFunctions.cc  GlobalFunctions.cc  PrototypeAttributes.cc  TemplateAttributes.cc
src/struct/: BoundCoords.cc
src/utility/: BoundCoords.cc  Window.cc
(+14 files in other folders)
